Fixed margins on small width sites

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -406,9 +406,14 @@ footer {
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
-    padding:20px 0;
+	padding: 30px 30px 50px 30px;
     margin: 190px auto 20px;
     max-width: 600px;
+	
+	
+	
+
+
   }
 
   footer{
@@ -456,6 +461,7 @@ footer {
   }
 
   section {
+	
     margin-top: 130px;
     margin-bottom: 0px;
     width: auto;
